--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "https": "^1.0.0",
     "jquery": "^3.4.0",
     "jsdom": "^15.0.0",
+    "mailparser": "^2.7.1",
     "node-ssh": "^6.0.0",
+    "ping": "^0.2.2",
     "request": "^2.88.0"
   }
 }
