--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "https": "^1.0.0",
     "jquery": "^3.4.0",
     "jsdom": "^15.0.0",
+    "lodash": "^4.17.14",
     "mailparser": "^2.7.1",
     "node-ssh": "^6.0.0",
     "ping": "^0.2.2",
